# MCP_Traders

./: .env  .gitignore  README.md  accounts.db  accounts_client.py  app.py  database.py  market.py  mcp_params.py  pyproject.toml  requirements.txt  traders.py  trading_floor.py
