[project]
name = "ai-trader"
version = "0.1.0"
description = "AI-powered stock trading simulation with multiple trader agents"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "polygon-api-client>=1.14.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "openai-agents>=0.0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
